--- a/Model/LR/LogReg-Model-v2.ipynb
+++ b/Model/LR/LogReg-Model-v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ea831a81",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "# --- Reproducibility: Set random seeds ---\n",
+    "\n",
     "import random\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a9c14fb1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Configuration ---\n",
+    "\n",
     "CONFIG = {\n",
     "    \"data_path\": \"data/emnist_balanced.npz\",\n",
     "    \"mapping_file\": \"emnist-balanced-mapping.txt\",\n",
@@ -47,7 +47,7 @@
     "    \"epochs\": 20,\n",
     "    \"input_shape\": (28, 28, 1),\n",
     "    \"num_classes\": 47,\n",
-    "    \"test_path\": \"path/to/your/image.png\",  # Update this path for inference\n",
+    "    \"test_path\": \"path/to/your/image.png\",  \n",
     "}\n",
     "NUM_CLASSES = 47\n"
    ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "15804595",
    "metadata": {},
    "outputs": [],
@@ -73,18 +73,18 @@
     "from sklearn.model_selection import train_test_split, StratifiedShuffleSplit\n",
     "from tensorflow.keras import layers, models, optimizers, callbacks\n",
     "\n",
-    "# Reproducibility\n",
+    "\n",
     "seed = 42\n",
     "np.random.seed(seed)\n",
     "random.seed(seed)\n",
     "tf.random.set_seed(seed)\n",
-    "# Ensures determinism on GPU (helps debugging)\n",
+    "\n",
     "tf.config.experimental.enable_op_determinism()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "79d6ed58",
    "metadata": {},
    "outputs": [
@@ -97,16 +97,16 @@
     }
    ],
    "source": [
-    "# Load and preprocess EMNIST data\n",
+    "\n",
     "data = np.load('data/emnist_balanced.npz')\n",
     "x = data['x']\n",
     "y = data['y']\n",
     "\n",
-    "# Correct orientation: rotate and flip\n",
+    "\n",
     "x = np.transpose(x, (0, 2, 1))\n",
     "x = np.flip(x, axis=2)\n",
     "\n",
-    "# Normalize and add channel dimension\n",
+    "\n",
     "x = x.astype('float32') / 255.0\n",
     "x = x[..., np.newaxis]\n",
     "\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "982b740b",
    "metadata": {},
    "outputs": [
@@ -128,10 +128,7 @@
     }
    ],
    "source": [
-    "# ----------------------------------------------------------\n",
-    "# Stratified Train / Validation / Test split\n",
-    "# 10% of full data -> test, 10% of remaining -> validation\n",
-    "# ----------------------------------------------------------\n",
+    "\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.10, random_state=seed)\n",
@@ -158,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e0b25905",
    "metadata": {},
    "outputs": [
@@ -240,12 +237,12 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "\n",
-    "# Flatten images\n",
+    "\n",
     "x_train_lr = x_train.reshape(-1, 28*28)\n",
     "x_val_lr   = x_val.reshape(-1, 28*28)\n",
     "x_test_lr  = x_test.reshape(-1, 28*28)\n",
     "\n",
-    "# Train Logistic Regression\n",
+    "\n",
     "lr = LogisticRegression(\n",
     "        multi_class=\"multinomial\",\n",
     "        solver=\"saga\",\n",
@@ -255,11 +252,11 @@
     "        random_state=seed)\n",
     "lr.fit(x_train_lr, y_train)\n",
     "\n",
-    "# Validation performance\n",
+    "\n",
     "y_val_pred = lr.predict(x_val_lr)\n",
     "print(\"Validation accuracy:\", accuracy_score(y_val, y_val_pred))\n",
     "\n",
-    "# Test performance\n",
+    "\n",
     "y_test_pred = lr.predict(x_test_lr)\n",
     "print(\"Test accuracy:\", accuracy_score(y_test, y_test_pred))\n",
     "print(classification_report(y_test, y_test_pred, digits=3))\n"
@@ -298,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8ee406f2-5d43-47a7-ac42-a5582291f2f6",
    "metadata": {},
    "outputs": [
@@ -311,7 +308,7 @@
     }
    ],
    "source": [
-    "# Save Logistic Regression model\n",
+    "\n",
     "import joblib\n",
     "from pathlib import Path\n",
     "\n",
