--- a/Model/RNN/RNN-Model.ipynb
+++ b/Model/RNN/RNN-Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ea831a81",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "# --- Reproducibility: Set random seeds ---\n",
+    "\n",
     "import random\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a9c14fb1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Configuration ---\n",
+    "\n",
     "CONFIG = {\n",
     "    \"data_path\": \"data/emnist_balanced.npz\",\n",
     "    \"mapping_file\": \"emnist-balanced-mapping.txt\",\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "79d6ed58",
    "metadata": {},
    "outputs": [
@@ -98,16 +98,16 @@
     }
    ],
    "source": [
-    "# Load and preprocess EMNIST data\n",
+    "\n",
     "data = np.load('data/emnist_balanced.npz')\n",
     "x = data['x']\n",
     "y = data['y']\n",
     "\n",
-    "# Correct orientation: rotate and flip\n",
+    "\n",
     "x = np.transpose(x, (0, 2, 1))\n",
     "x = np.flip(x, axis=2)\n",
     "\n",
-    "# Normalize and add channel dimension\n",
+    "\n",
     "x = x.astype('float32') / 255.0\n",
     "x = x[..., np.newaxis]\n",
     "\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "982b740b",
    "metadata": {},
    "outputs": [
@@ -129,10 +129,7 @@
     }
    ],
    "source": [
-    "# ----------------------------------------------------------\n",
-    "# Stratified Train / Validation / Test split\n",
-    "# 10% of full data -> test, 10% of remaining -> validation\n",
-    "# ----------------------------------------------------------\n",
+    "\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.10, random_state=seed)\n",
@@ -150,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "89027fd5",
    "metadata": {},
    "outputs": [
@@ -163,11 +160,7 @@
     }
    ],
    "source": [
-    "# ----------------------------------------------------------\n",
-    "# Corrected Train/Val/Test split (stratified)\n",
-    "#  - 10% of the full dataset for the final test set\n",
-    "#  - 10% of the remaining data for validation\n",
-    "# ----------------------------------------------------------\n",
+    "\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.10, random_state=seed)\n",
@@ -185,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "fa0a63c0",
    "metadata": {},
    "outputs": [
@@ -258,15 +251,13 @@
     }
    ],
    "source": [
-    "# ----------------------\n",
-    "# RNN model for EMNIST\n",
-    "# ----------------------\n",
+    "\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import models, optimizers\n",
     "from tensorflow.keras import layers\n",
     "\n",
-    "# Callbacks: EarlyStopping, ModelCheckpoint, ReduceLROnPlateau\n",
+    "\n",
     "checkpoint_path = 'RNN-Model-v2.keras'\n",
     "cb = [\n",
     "    callbacks.EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True),\n",
@@ -318,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d6bb4552",
    "metadata": {
     "scrolled": true
@@ -395,7 +386,7 @@
     }
    ],
    "source": [
-    "# Train\n",
+    "\n",
     "history = model.fit(\n",
     "    x_train, y_train,\n",
     "    validation_data=(x_val, y_val),\n",
@@ -441,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ef329b15",
    "metadata": {
     "scrolled": true
@@ -509,7 +500,7 @@
     }
    ],
    "source": [
-    "# Classification report\n",
+    "\n",
     "from sklearn.metrics import classification_report\n",
     "import numpy as np\n",
     "\n",
@@ -549,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ac9874e7",
    "metadata": {},
    "outputs": [
@@ -632,10 +623,10 @@
     "import pandas as pd\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, classification_report\n",
     "\n",
-    "# === 1. Plot Training Loss and Accuracy ===\n",
+    "\n",
     "plt.figure(figsize=(10, 4))\n",
     "\n",
-    "# Loss\n",
+    "\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(history.history['loss'], label='Train Loss')\n",
     "plt.plot(history.history['val_loss'], label='Val Loss')\n",
@@ -644,7 +635,7 @@
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "\n",
-    "# Accuracy\n",
+    "\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(history.history['accuracy'], label='Train Acc')\n",
     "plt.plot(history.history['val_accuracy'], label='Val Acc')\n",
@@ -657,7 +648,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# === 2. Confusion Matrix ===\n",
+    "\n",
     "y_pred = model.predict(x_val).argmax(axis=1)\n",
     "cm = confusion_matrix(y_val, y_pred)\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=[mapping[i] for i in sorted(mapping)])\n",
@@ -667,7 +658,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# === 3. Per-Class Accuracy (Recall) ===\n",
+    "\n",
     "report = classification_report(y_val, y_pred, output_dict=True, zero_division=0)\n",
     "per_class_recall = {mapping[int(k)]: v['recall'] for k, v in report.items() if k.isdigit()}\n",
     "\n",
@@ -681,7 +672,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# === 4. Confidence Histogram ===\n",
+    "\n",
     "y_probs = model.predict(x_val)\n",
     "max_confidences = y_probs.max(axis=1)\n",
     "\n",
@@ -693,7 +684,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# === 5. Misclassified Samples ===\n",
+    "\n",
     "wrong_idxs = np.where(y_pred != y_val)[0]\n",
     "n = 6\n",
     "sampled = np.random.choice(wrong_idxs, n)\n",
@@ -714,7 +705,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# === 6. Top-K Accuracy (Optional) ===\n",
+    "\n",
     "top_k = 3\n",
     "top_k_correct = np.any(np.argsort(y_probs, axis=1)[:, -top_k:] == y_val[:, None], axis=1)\n",
     "top_k_acc = np.mean(top_k_correct)\n",
@@ -723,23 +714,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e5f2ab1c-6dd6-4cb8-8ec3-fc63724ec2c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load raw data\n",
+    "\n",
     "data = np.load('data/emnist_balanced.npz')\n",
-    "x_raw = data['x']           # Original uint8 images\n",
+    "x_raw = data['x']           \n",
     "y = data['y']\n",
     "\n",
-    "# Preprocess x (rotate, flip, normalize, add channel)\n",
+    "\n",
     "x = np.transpose(x_raw, (0, 2, 1))\n",
     "x = np.flip(x, axis=2)\n",
     "x = x.astype('float32') / 255.0\n",
     "x = x[..., np.newaxis]\n",
     "\n",
-    "# Split both x and x_raw so we can pair originals with processed\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "x_train, x_temp, x_raw_train, x_raw_temp, y_train, y_temp = train_test_split(\n",
@@ -753,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8ac63748-e54b-4230-8e4c-061fbbccb58a",
    "metadata": {},
    "outputs": [
@@ -869,32 +860,32 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Number of examples to plot\n",
+    "\n",
     "n = 5\n",
     "\n",
-    "# Pick n random indices from validation set\n",
+    "\n",
     "idxs = np.random.choice(len(x_val), size=n, replace=False)\n",
     "\n",
     "for i, idx in enumerate(idxs):\n",
-    "    # Retrieve original and preprocessed images (correctly aligned)\n",
-    "    orig_img = x_raw_val[idx]             # original (uint8, unrotated)\n",
-    "    proc_img = x_val[idx].squeeze()       # preprocessed (rotated + flipped + normalized)\n",
+    "    \n",
+    "    orig_img = x_raw_val[idx]             \n",
+    "    proc_img = x_val[idx].squeeze()       \n",
     "\n",
-    "    # Undo flip *only for display*\n",
+    "    \n",
     "    proc_img_display = np.flip(proc_img, axis=1)\n",
     "\n",
-    "    # True label\n",
+    "    \n",
     "    true_idx = y_val[idx]\n",
     "    true_lbl = mapping[true_idx]\n",
     "\n",
-    "    # Model prediction (on real preprocessed input)\n",
+    "    \n",
     "    inp = proc_img.reshape(1, 28, 28, 1)\n",
     "    preds = model.predict(inp, verbose=0)[0]\n",
     "    pred_idx = preds.argmax()\n",
     "    pred_lbl = mapping[pred_idx]\n",
     "    pred_conf = preds[pred_idx]\n",
     "\n",
-    "    # Debug output\n",
+    "    \n",
     "    print(f\"[{i+1}] True Index: {true_idx} → '{true_lbl}'\")\n",
     "    print(f\"    Input min/max: {proc_img.min():.2f}/{proc_img.max():.2f}\")\n",
     "    print(f\"    Predicted Index: {pred_idx} → '{pred_lbl}' with confidence {pred_conf:.2f}\")\n",
@@ -902,7 +893,7 @@
     "    top3 = [(mapping[i], preds[i]) for i in top3_idx]\n",
     "    print(\"    Top 3 predictions:\", top3)\n",
     "\n",
-    "    # Plot original and corrected preprocessed image (unflipped for viewing)\n",
+    "    \n",
     "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(6, 3))\n",
     "    ax1.imshow(orig_img, cmap='gray')\n",
     "    ax1.set_title(\"Original\")\n",
